--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -10,28 +10,23 @@
       android:layout_height="wrap_content"
       android:textSize="24sp" />
 
-  <Button
-      android:id="@+id/button3"
+  <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Фзия" />
+      android:orientation="horizontal">
 
-  <Button
-      android:id="@+id/button4"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Button" />
+    <Button
+        android:id="@+id/start_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Пропустить вопрос" />
 
-  <Button
-      android:id="@+id/button5"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Button" />
-
-  <Button
-      android:id="@+id/btnNextQuestion"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="Следующий вопрос" />
-
+    <Button
+        android:id="@+id/stop_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Следующий вопрос" />
+  </LinearLayout>
 </LinearLayout>
